--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,63 +3,46 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>User Registration</title>
+    <title>TaskFlow - Modern Task Manager</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Register</h2>
-        <form id="registrationForm">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username" placeholder="Enter your username" required />
-            </div>
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="Enter your email" required />
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" placeholder="Enter your password" required />
-            </div>
-            <button type="submit">Register</button>
-        </form>
-        <div id="message"></div>
+    <div class="background-animation">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
     </div>
-
-    <script>
-        document.getElementById('registrationForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-            const data = Object.fromEntries(formData.entries());
-
-            const messageDiv = document.getElementById('message');
-            messageDiv.textContent = '';
-            messageDiv.style.color = '';
-
-            try {
-                const response = await fetch('https://registratin-backend.onrender.com/api/register', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(data)
-                });
-
-                const result = await response.json();
-
-                if(response.ok){
-                    messageDiv.style.color = 'green';
-                    messageDiv.textContent = '✅ Registration successful!';
-                    form.reset();
-                } else {
-                    messageDiv.style.color = 'red';
-                    messageDiv.textContent = '❌ ' + result.message;
-                }
-            } catch (error) {
-                messageDiv.style.color = 'red';
-                messageDiv.textContent = '❌ Network error. Please try again later.';
-            }
-        });
-    </script>
+    
+    <div class="container">
+        <div class="glass-card welcome-box">
+            <div class="logo">
+                <i class="fas fa-tasks"></i>
+                <span>TaskFlow</span>
+            </div>
+            <h1>Organize Your Work, Simplify Your Life</h1>
+            <p>Secure your account and manage your tasks seamlessly with our intuitive task management system.</p>
+            <div class="btn-group">
+                <a href="login.html" class="btn btn-primary">
+                    <span>Get Started</span>
+                    <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+            <div class="features">
+                <div class="feature">
+                    <i class="fas fa-shield-alt"></i>
+                    <h3>Secure</h3>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-bolt"></i>
+                    <h3>Fast</h3>
+                </div>
+                <div class="feature">
+                    <i class="fas fa-mobile-alt"></i>
+                    <h3>Responsive</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
