--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,18 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Login - TaskFlow</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="background-animation">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+    </div>
+    
     <div class="container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="email" id="email" placeholder="Email" required />
-            <input type="password" id="password" placeholder="Password" required />
-            <button type="submit">Login</button>
-        </form>
-        <div id="message"></div>
+        <div class="glass-card form-box">
+            <div class="logo">
+                <i class="fas fa-tasks"></i>
+                <span>TaskFlow</span>
+            </div>
+            <h2>Welcome Back</h2>
+            <form id="loginForm">
+                <input type="email" id="email" placeholder="Email Address" required />
+                <input type="password" id="password" placeholder="Password" required />
+                <button type="submit" class="btn btn-primary">
+                    <span>Login</span>
+                    <i class="fas fa-sign-in-alt"></i>
+                </button>
+                <p id="message" class="message"></p>
+            </form>
+            <div class="form-footer">
+                <p>Don't have an account? <a href="#" id="registerLink">Contact administrator</a></p>
+                <p><a href="#">Forgot your password?</a></p>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -21,29 +42,39 @@
             e.preventDefault();
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
+            const msg = document.getElementById('message');
+
+            // Show loading state
+            msg.textContent = "Signing in...";
+            msg.style.color = "var(--gray)";
 
             try {
-                const response = await fetch('https://registration-authentication.onrender.com/api/login', {
+                const res = await fetch('https://registration-authentification.onrender.com/api/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password })
                 });
 
-                const data = await response.json();
-                const messageDiv = document.getElementById('message');
-
-                if (response.ok) {
-                    messageDiv.style.color = 'green';
-                    messageDiv.textContent = data.message;
+                const data = await res.json();
+                if (res.ok) {
                     localStorage.setItem('token', data.token);
-                    setTimeout(() => window.location.href = 'profile.html', 1000);
+                    msg.textContent = "Login successful! Redirecting...";
+                    msg.style.color = "var(--success)";
+                    setTimeout(() => window.location.href = "profile.html", 1000);
                 } else {
-                    messageDiv.style.color = 'red';
-                    messageDiv.textContent = data.message;
+                    msg.textContent = data.message || "Login failed. Please try again.";
+                    msg.style.color = "var(--danger)";
                 }
             } catch (error) {
-                console.error(error);
+                msg.textContent = "Network error. Please try again.";
+                msg.style.color = "var(--danger)";
             }
+        });
+
+        // Handle register link click
+        document.getElementById('registerLink').addEventListener('click', (e) => {
+            e.preventDefault();
+            alert("Please contact your system administrator to create an account.");
         });
     </script>
 </body>
