--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -2,51 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Your Profile - TaskFlow</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <div class="background-animation">
+        <div class="shape shape-1"></div>
+        <div class="shape shape-2"></div>
+        <div class="shape shape-3"></div>
+    </div>
+    
     <div class="container">
-        <h2>Profile</h2>
-        <div id="content"></div>
-        <button onclick="logout()">Logout</button>
+        <div class="glass-card profile-box">
+            <div class="logo">
+                <i class="fas fa-tasks"></i>
+                <span>TaskFlow</span>
+            </div>
+            <h2>Your Profile</h2>
+            <div id="profileInfo">
+                <div class="loading">
+                    <i class="fas fa-spinner fa-spin"></i>
+                    <p>Loading your information...</p>
+                </div>
+            </div>
+            <button id="logout" class="btn logout">
+                <span>Logout</span>
+                <i class="fas fa-sign-out-alt"></i>
+            </button>
+        </div>
     </div>
 
     <script>
-        async function loadProfile() {
+        window.addEventListener('DOMContentLoaded', async () => {
             const token = localStorage.getItem('token');
+            const infoDiv = document.getElementById('profileInfo');
+
             if (!token) {
-                window.location.href = 'login.html';
+                infoDiv.innerHTML = `
+                    <p style="color: var(--danger); text-align: center;">
+                        <i class="fas fa-exclamation-circle"></i> Please login to view your profile.
+                    </p>
+                    <div style="text-align: center; margin-top: 20px;">
+                        <a href="login.html" class="btn btn-primary">Login Now</a>
+                    </div>
+                `;
                 return;
             }
 
             try {
-                const response = await fetch('https://registration-authentication.onrender.com/api/profile', {
-                    method: 'GET',
+                const res = await fetch('https://registration-authentification.onrender.com/api/profile', {
                     headers: { 'Authorization': 'Bearer ' + token }
                 });
 
-                const data = await response.json();
-                const content = document.getElementById('content');
-
-                if (response.ok) {
-                    content.innerHTML = `<p>${data.message}</p><p>Email: ${data.email}</p>`;
+                if (res.ok) {
+                    const data = await res.json();
+                    infoDiv.innerHTML = `
+                        <div class="profile-header">
+                            <div class="avatar">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <h3>${data.name || 'User'}</h3>
+                        </div>
+                        <p><strong>Email:</strong> ${data.email}</p>
+                        <p><strong>Member since:</strong> ${new Date(data.createdAt).toLocaleDateString()}</p>
+                        <p>Welcome to your TaskFlow profile! Here you can manage your account settings and preferences.</p>
+                    `;
                 } else {
-                    content.style.color = 'red';
-                    content.textContent = data.message;
-                    setTimeout(() => window.location.href = 'login.html', 2000);
+                    infoDiv.innerHTML = `
+                        <p style="color: var(--danger);">
+                            <i class="fas fa-exclamation-triangle"></i> Session expired or invalid. Please login again.
+                        </p>
+                    `;
                 }
             } catch (error) {
-                console.error(error);
+                infoDiv.innerHTML = `
+                    <p style="color: var(--danger);">
+                        <i class="fas fa-exclamation-triangle"></i> Network error. Please check your connection.
+                    </p>
+                `;
             }
-        }
+        });
 
-        function logout() {
+        document.getElementById('logout').addEventListener('click', () => {
             localStorage.removeItem('token');
-            window.location.href = 'login.html';
-        }
-
-        loadProfile();
+            window.location.href = "index.html";
+        });
     </script>
 </body>
 </html>
