--- a/index.html
+++ b/index.html
@@ -16,31 +16,29 @@
     
     <div class="container">
         <div class="glass-card welcome-box">
-            <div class="logo">
+            <div class="app-logo">
                 <i class="fas fa-tasks"></i>
-                <span>TaskFlow</span>
+                <h1>TaskFlow</h1>
             </div>
-            <h1>Organize Your Work, Simplify Your Life</h1>
-            <p>Secure your account and manage your tasks seamlessly with our intuitive task management system.</p>
-            <div class="btn-group">
-                <a href="login.html" class="btn btn-primary">
-                    <span>Get Started</span>
-                    <i class="fas fa-arrow-right"></i>
-                </a>
-            </div>
+            <h2>Streamline Your Productivity</h2>
+            <p>Organize tasks, collaborate with teams, and achieve more with our intuitive task management system.</p>
             <div class="features">
                 <div class="feature">
-                    <i class="fas fa-shield-alt"></i>
-                    <h3>Secure</h3>
+                    <i class="fas fa-check-circle"></i>
+                    <span>Smart Task Organization</span>
                 </div>
                 <div class="feature">
-                    <i class="fas fa-bolt"></i>
-                    <h3>Fast</h3>
+                    <i class="fas fa-users"></i>
+                    <span>Team Collaboration</span>
                 </div>
                 <div class="feature">
-                    <i class="fas fa-mobile-alt"></i>
-                    <h3>Responsive</h3>
+                    <i class="fas fa-bell"></i>
+                    <span>Smart Reminders</span>
                 </div>
+            </div>
+            <div class="btn-group">
+                <a href="register.html" class="btn btn-primary">Get Started</a>
+                <a href="login.html" class="btn btn-secondary">Login</a>
             </div>
         </div>
     </div>
